public class Constant
{
    public static string ANIM_IDLE = "idle";
    public static string ANIM_RUN = "run";
    public static string ANIM_DIE = "die";
    public static string ANIM_ATTACK = "attack";
    public static string ANIM_WIN = "win";
    
    public static string TAG_CHARACTER = "Character";
    public static string TAG_PLAYER = "Player";
    public static string TAG_ATTACKRANGE = "AttackRange";
    public static string TAG_WALL = "Wall";
}